media: Make media mojo services a component

Previously media mojo services are in multiple small source_sets. This
was okay when they are only depended by one target (i.e. content). But
now we have multiple targets depending on them. For example, content and
media/gpu both depend on cdm_services. This causes duplicate definition
of some global veriables, e.g. g_cdm_manager in mojo_cdm_service.cc.

TBR=jam@chromium.org
BUG=610904
TEST=EME playback works.

Review-Url: https://codereview.chromium.org/1968833002
Cr-Commit-Position: refs/heads/master@{#394323}

Former-commit-id: d3b5d3f46840aba12d0788a14f14be9739712284