media/mojo/services/mojo_media_application_factory.h
@@ -8,13 +8,14 @@
 #include <memory>
 
 #include "base/callback_forward.h"
+#include "media/mojo/services/media_mojo_export.h"
 #include "services/shell/public/cpp/shell_client.h"
 
 namespace media {
 
 // Creates a MojoMediaApplication instance using the default MojoMediaClient.
-std::unique_ptr<shell::ShellClient> CreateMojoMediaApplication(
-    const base::Closure& quit_closure);
+std::unique_ptr<shell::ShellClient> MEDIA_MOJO_EXPORT
+CreateMojoMediaApplication(const base::Closure& quit_closure);
 
 }  // namespace media
 
